terraform/ecs-service.tf
resource "aws_ecs_service" "app_service" {
  name            = "aws-devops-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn

  desired_count = 1

  launch_type = "FARGATE"

  network_configuration {
  subnets = [
    aws_subnet.public_subnet_1.id,
    aws_subnet.public_subnet_2.id
  ]

  security_groups  = [aws_security_group.ecs_sg.id]
  assign_public_ip = true
}

  load_balancer {
    target_group_arn = aws_lb_target_group.app_tg.arn
    container_name   = "aws-devops-container"
    container_port   = 80
  }

  depends_on = [aws_lb_listener.http]
}
